--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js",
     "firebase/analytics": "https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js",
     "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
