--- a/index.html
+++ b/index.html
@@ -13,14 +13,27 @@
       --neon-orange: #FF6A00;
       --bg-black: #050505;
       --card-bg: #0F0F0F;
+      --grid-color: rgba(255, 255, 255, 0.02);
+      --text-main: #ffffff;
+      --text-dim: #9ca3af;
+    }
+
+    /* Light Mode Variables */
+    body.light-mode {
+      --bg-black: #fcfcfc;
+      --card-bg: #ffffff;
+      --grid-color: rgba(0, 0, 0, 0.05);
+      --text-main: #000000;
+      --text-dim: #4b5563;
     }
 
     body {
       background-color: var(--bg-black);
-      color: white;
+      color: var(--text-main);
       font-family: 'Space+Grotesk', sans-serif;
       margin: 0;
       overflow-x: hidden;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     .mono {
@@ -34,6 +47,9 @@
     }
     ::-webkit-scrollbar-track {
       background: #000;
+    }
+    body.light-mode ::-webkit-scrollbar-track {
+      background: #f0f0f0;
     }
     ::-webkit-scrollbar-thumb {
       background: #333;
@@ -52,6 +68,11 @@
       position: relative;
       overflow: hidden;
       border: 1px solid rgba(255, 106, 0, 0.2);
+    }
+
+    body.light-mode .neon-border {
+      border: 1px solid rgba(255, 106, 0, 0.3);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
     }
 
     .neon-border::after {
@@ -75,8 +96,50 @@
     .bg-grid {
       background-size: 40px 40px;
       background-image: 
-        linear-gradient(to right, rgba(255, 255, 255, 0.02) 1px, transparent 1px),
-        linear-gradient(to bottom, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
+        linear-gradient(to right, var(--grid-color) 1px, transparent 1px),
+        linear-gradient(to bottom, var(--grid-color) 1px, transparent 1px);
+    }
+
+    /* Light Mode Overrides for Tailwind Hex Classes */
+    body.light-mode .bg-\[\#050505\], 
+    body.light-mode .bg-\[\#0F0F0F\],
+    body.light-mode .bg-\[\#121212\],
+    body.light-mode .bg-\[\#080808\] {
+      background-color: var(--card-bg) !important;
+    }
+
+    body.light-mode .bg-black {
+      background-color: var(--bg-black) !important;
+    }
+
+    body.light-mode .text-white {
+      color: var(--text-main) !important;
+    }
+
+    body.light-mode .text-gray-400,
+    body.light-mode .text-gray-500 {
+      color: var(--text-dim) !important;
+    }
+
+    body.light-mode .border-white\/5,
+    body.light-mode .border-white\/10 {
+      border-color: rgba(0, 0, 0, 0.08) !important;
+    }
+
+    body.light-mode .bg-white\/2,
+    body.light-mode .bg-white\/5 {
+      background-color: rgba(0, 0, 0, 0.03) !important;
+    }
+
+    body.light-mode .bg-black\/40,
+    body.light-mode .bg-black\/90,
+    body.light-mode .bg-black\/85 {
+      background-color: rgba(255, 255, 255, 0.9) !important;
+      backdrop-blur: 10px;
+    }
+
+    body.light-mode .label-sm {
+      color: #777 !important;
     }
   </style>
 <script type="importmap">
